--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"mobile-center-analytics": "^0.4.0",
+		"mobile-center-crashes": "^0.4.0",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.4"
 	},
