--- a/ios/tranaTest/GoogleService-Info.plist
+++ b/ios/tranaTest/GoogleService-Info.plist
@@ -1,40 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
-<dict>
-	<key>AD_UNIT_ID_FOR_BANNER_TEST</key>
-	<string>ca-app-pub-3940256099942544/2934735716</string>
-	<key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
-	<string>ca-app-pub-3940256099942544/4411468910</string>
-	<key>CLIENT_ID</key>
-	<string>363957701339-765cbpvjlfnh3uq91rk9gmlo9argodgk.apps.googleusercontent.com</string>
-	<key>REVERSED_CLIENT_ID</key>
-	<string>com.googleusercontent.apps.363957701339-765cbpvjlfnh3uq91rk9gmlo9argodgk</string>
-	<key>API_KEY</key>
-	<string>AIzaSyCfFG4oX3cw5V-MYUwbug8i_aZdTdycVd8</string>
-	<key>GCM_SENDER_ID</key>
-	<string>363957701339</string>
-	<key>PLIST_VERSION</key>
-	<string>1</string>
-	<key>BUNDLE_ID</key>
-	<string>se.river.amsbeer</string>
-	<key>PROJECT_ID</key>
-	<string>river-amsterdam</string>
-	<key>STORAGE_BUCKET</key>
-	<string>river-amsterdam.appspot.com</string>
-	<key>IS_ADS_ENABLED</key>
-	<true/>
-	<key>IS_ANALYTICS_ENABLED</key>
-	<false/>
-	<key>IS_APPINVITE_ENABLED</key>
-	<false/>
-	<key>IS_GCM_ENABLED</key>
-	<true/>
-	<key>IS_SIGNIN_ENABLED</key>
-	<true/>
-	<key>GOOGLE_APP_ID</key>
-	<string>1:363957701339:ios:4a27e24e3c558961</string>
-	<key>DATABASE_URL</key>
-	<string>https://river-amsterdam.firebaseio.com</string>
-</dict>
+  <dict>
+    <key>AD_UNIT_ID_FOR_BANNER_TEST</key>
+    <string>ca-app-pub-3940256099942544/2934735716</string>
+    <key>AD_UNIT_ID_FOR_INTERSTITIAL_TEST</key>
+    <string>ca-app-pub-3940256099942544/4411468910</string>
+    <key>CLIENT_ID</key>
+    <string>363957701339-765cbpvjlfnh3uq91rk9gmlo9argodgk.apps.googleusercontent.com</string>
+    <key>REVERSED_CLIENT_ID</key>
+    <string>com.googleusercontent.apps.363957701339-765cbpvjlfnh3uq91rk9gmlo9argodgk</string>
+    <key>API_KEY</key>
+    <string>AIzaSyCfFG4oX3cw5V-MYUwbug8i_aZdTdycVd8</string>
+    <key>GCM_SENDER_ID</key>
+    <string>363957701339</string>
+    <key>PLIST_VERSION</key>
+    <string>1</string>
+    <key>BUNDLE_ID</key>
+    <string>se.river.amsbeer</string>
+    <key>PROJECT_ID</key>
+    <string>river-amsterdam</string>
+    <key>STORAGE_BUCKET</key>
+    <string>river-amsterdam.appspot.com</string>
+    <key>IS_ADS_ENABLED</key>
+    <true/>
+    <key>IS_ANALYTICS_ENABLED</key>
+    <false/>
+    <key>IS_APPINVITE_ENABLED</key>
+    <false/>
+    <key>IS_GCM_ENABLED</key>
+    <true/>
+    <key>IS_SIGNIN_ENABLED</key>
+    <true/>
+    <key>GOOGLE_APP_ID</key>
+    <string>1:363957701339:ios:4a27e24e3c558961</string>
+    <key>DATABASE_URL</key>
+    <string>https://river-amsterdam.firebaseio.com</string>
+    <key>CodePushDeploymentKey</key>
+    <string>mdmKRHH_r2aHa2sRy4CE9062OWL3VJKOj_Okb</string>
+  </dict>
 </plist>
