--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 		"mobile-center-crashes": "^0.4.0",
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.4",
+		"react-native-code-push": "^2.0.2-beta",
 		"react-native-firestack": "^2.3.9",
 		"react-native-social-auth": "^1.0.0"
 	},
