--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
-		"test": "jest"
+		"test": "jest",
+		"deploy": "code-push release-react beer-ams ios"
 	},
 	"dependencies": {
 		"date-fns": "^1.28.3",
@@ -14,7 +15,7 @@
 		"react-native": "0.43.4",
 		"react-native-code-push": "^2.0.2-beta",
 		"react-native-firestack": "^2.3.9",
-		"react-native-social-auth": "^1.0.0"
+		"react-native-social-auth": "^1.0.0",
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
