--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
 		"react-native": "0.43.4",
 		"react-native-code-push": "^2.0.2-beta",
 		"react-native-firestack": "^2.3.9",
-		"react-native-social-auth": "^1.0.0"
+		"react-native-social-auth": "^1.0.0",
+		"react-navigation": "^1.0.0-beta.8"
 	},
 	"devDependencies": {
 		"babel-jest": "19.0.0",
