--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"react": "16.0.0-alpha.6",
 		"react-native": "0.43.4",
 		"react-native-code-push": "^2.0.2-beta",
+		"react-native-confetti": "^0.0.4",
 		"react-native-firestack": "^2.3.9",
 		"react-native-social-auth": "^1.0.0",
 		"react-navigation": "^1.0.0-beta.8"
